WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63770
Smooth scrolling fixes
https://bugs.webkit.org/show_bug.cgi?id=63770
Summary
Smooth scrolling fixes
Scott Byer
Reported
2011-06-30 16:52:21 PDT
Smooth scrolling fixes
Attachments
Patch
(9.56 KB, patch)
2011-06-30 17:08 PDT
,
Scott Byer
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Scott Byer
Comment 1
2011-06-30 17:08:48 PDT
Created
attachment 99401
[details]
Patch
Scott Byer
Comment 2
2011-07-01 16:16:29 PDT
Can I get a cq+ on this? Thanks.
WebKit Review Bot
Comment 3
2011-07-01 17:26:50 PDT
Comment on
attachment 99401
[details]
Patch Clearing flags on attachment: 99401 Committed
r90303
: <
http://trac.webkit.org/changeset/90303
>
WebKit Review Bot
Comment 4
2011-07-01 17:26:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug