2011-07-01  Scott Byer  <scottbyer@chromium.org>

Reviewed by Adam Barth.

        Smooth scrolling fixes
        https://bugs.webkit.org/show_bug.cgi?id=63770

        Tests: Chromium webkit_unit_tests ScrollAnimatorNoneTest.ScrollWheelTrace and .LinuxTrackPadTrace

        Fix issues found in manual testing; distill the traces into unit tests. Fix the issues the tests exposed in the
        scroll animation code.

        * platform/ScrollAnimatorNone.cpp:
        (WebCore::ScrollAnimatorNone::PerAxisData::updateDataFromParameters):
        (WebCore::ScrollAnimatorNone::scroll):
2011-07-01  Scott Byer  <scottbyer@chromium.org>

        Reviewed by Adam Barth.

        Smooth scrolling fixes
        https://bugs.webkit.org/show_bug.cgi?id=63770

        Fix issues found in manual testing; distill the traces into unit tests. Fix the issues the tests exposed in the
        scroll animation code.

        * tests/ScrollAnimatorNoneTest.cpp:
        (ScrollAnimatorNoneTest::updateDataFromParameters):
        (TEST_F):

Canonical link: https://commits.webkit.org/79569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90303 268f45cc-cd09-0410-ab3c-d52691b4dbfc